[tool.poetry]
name = "pulcige"
version = "0.1.0"
description = "PulciGe's website"
authors = ["rikyiso01 <riky.isola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
Jinja2 = "^3.1.2"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
